...

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:id="@+id/cover" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="5dp"
...
