...

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <TextView
                                    android:id="@+id/textView12"
                                    android:layout_width="114dp"
                                    android:layout_height="wrap_content"
                                    android:text="Origen"
                                    android:textStyle="bold" />
                            </TableRow>

...
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:gravity="left">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="326dp"
                        android:layout_height="wrap_content"
                        android:text="Descripcion"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </TableRow>
...
